Fix localization side nav width (#1157)
* Fix localization side nav width

* Remove truncated label so it works for all the languages

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.scss
@@ -15,12 +15,12 @@
   .body-content {
     display: flex!important;
   }
-  
+
   //display side nav for 100% zooming
-  @media(min-width: 640px) and (min-height: 500px) {
+  @media(min-width: 640px){
     section.sidebar {
       display: block;
-      min-width: 265px;
+      width: 265px;
       position: fixed;
       top: 0px;
       bottom: 0px;
